# camera_calibration

./: LICENSE.txt  README.md  README.txt  auto_calib.m  autocalibration.m  calib_gui_normal_auto.m  calib_stereo_auto.m  download_scipt.sh  make_target.m
ICG_functions/: ICG_boundingBox.m  ICG_checkerboardCorners.m  ICG_createCalibrationMarker.m  ICG_createRegistrationTemplate.m  ICG_extractCornersLoop.m  ICG_findMarker.m  ICG_fitAffinity2D.m  ICG_initialCornerGuess.m  ICG_interp2.m  ICG_normXCorr2.m  ICG_normalizePoints.m  ICG_pointsInsideRegion.m  ICG_projectiveRegistration.m
ICG_functions/normxcorr2_src/: CMakeLists.txt  normxcorr2_mex.cpp
ICG_functions/normxcorr2_src/cmake/: FindMatlab_ICG.cmake
ICG_functions/private/: ConnectedComponents.m  GetOrientationIdentity.m  adaptivethreshold.m  calcIntersection.m  findMarkerCorners.m  getSimilarity.m  hessian.m  homo_ic.m  init_h.m  jacobian_h.m  lineSegments.m  normalise2dpts.m  normxcorr2_mex.mexa64  normxcorr2_mex.mexw64  quadtobox_h.m  sd_images.m  sd_update.m  selectBestMatch.m  warp_h.m
readme/: style.css
